--- a/views/home.ejs
+++ b/views/home.ejs
@@ -113,7 +113,7 @@
             <a href="https://fb.com/" target="_blank" class="outer-shadow hover-in-shadow"><i class="fab fa-facebook-f"></i></a>
             <a href="https://twitter.com/?lang=en" target="_blank" class="outer-shadow hover-in-shadow"><i class="fab fa-twitter"></i></a>
             <a href="https://instagram.com" target="_blank" class="outer-shadow hover-in-shadow"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/ethan-dang-15a5b01aa/" target="_blank" class="outer-shadow hover-in-shadow"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/in/lmndang/" target="_blank" class="outer-shadow hover-in-shadow"><i class="fab fa-linkedin-in"></i></a>
           </div>
           <!-- Social links end   -->
   
